--- a/helloworld-rs/pom.xml
+++ b/helloworld-rs/pom.xml
@@ -172,7 +172,7 @@
                         <version>${version.war.plugin}</version>
                         <configuration>
                             <outputDirectory>deployments</outputDirectory>
-                            <warName>ROOT</warName>
+                            <warName>helloWorld</warName>
                             <!-- Java EE doesn't require web.xml, Maven needs to catch up! -->
                             <failOnMissingWebXml>false</failOnMissingWebXml>
                         </configuration>
